# theguardianpkg

./: LICENSE  README.md  pyproject.toml
docs/: conf.py
tests/: ak.py  test_theguardianpkg.py
theguardianpkg/: CHANGELOG.md  CONTRIBUTING.md  pyproject.toml
theguardianpkg/.github/workflows/: ci-cd.yml
theguardianpkg/docs/: Makefile  example.ipynb  make.bat
theguardianpkg/src/theguardianpkg/: __init__.py  theguardianpkg.py
theguardianpkg/tests/: test_theguardianpkg.py
